// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layer aligns bottom 1`] = `
<div
  class="StyledLayer-ceZzeh bGwGvr"
  id="bottom-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledContainer-gBGbkw kqwWDX"
  >
    This is a layer
  </div>
</div>
`;

exports[`Layer aligns bottom 2`] = `
"

.bGwGvr {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  position: relative;
  z-index: 10;
  height: 100vh;
  overflow: auto;
  background-color: rgba(0,0,0,0.5);
}

@media only screen and (min-width:700px) {
  .bGwGvr {
    position: fixed;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
  }
}

@media only screen and (max-width:699px) {
  .bClIQd {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .bClIQd {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0px;
    bottom: 0px;
    left: 0px;
    -webkit-animation: hlTcuJ 0.2s ease-in-out forwards;
    animation: hlTcuJ 0.2s ease-in-out forwards;
  }
}

@media only screen and (max-width:699px) {
  .bmCmlg {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .bmCmlg {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0px;
    bottom: 0px;
    right: 0px;
    -webkit-animation: vdrVB 0.2s ease-in-out forwards;
    animation: vdrVB 0.2s ease-in-out forwards;
  }
}

@media only screen and (max-width:699px) {
  .iQfNKu {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .iQfNKu {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    left: 50%;
    -webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
    -webkit-animation: fVNlMJ 0.2s ease-in-out forwards;
    animation: fVNlMJ 0.2s ease-in-out forwards;
  }
}

@media only screen and (max-width:699px) {
  .kqwWDX {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .kqwWDX {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    bottom: 0px;
    right: 50%;
    -webkit-transform: translateX(50%);
    -ms-transform: translateX(50%);
    transform: translateX(50%);
    -webkit-animation: ifqUGO 0.2s ease-in-out forwards;
    animation: ifqUGO 0.2s ease-in-out forwards;
  }
}"
`;

exports[`Layer aligns left 1`] = `
<div
  class="StyledLayer-ceZzeh bGwGvr"
  id="left-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledContainer-gBGbkw bClIQd"
  >
    This is a layer
  </div>
</div>
`;

exports[`Layer aligns left 2`] = `
"

.bGwGvr {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  position: relative;
  z-index: 10;
  height: 100vh;
  overflow: auto;
  background-color: rgba(0,0,0,0.5);
}

@media only screen and (min-width:700px) {
  .bGwGvr {
    position: fixed;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
  }
}

@media only screen and (max-width:699px) {
  .bClIQd {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .bClIQd {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0px;
    bottom: 0px;
    left: 0px;
    -webkit-animation: hlTcuJ 0.2s ease-in-out forwards;
    animation: hlTcuJ 0.2s ease-in-out forwards;
  }
}"
`;

exports[`Layer aligns right 1`] = `
<div
  class="StyledLayer-ceZzeh bGwGvr"
  id="right-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledContainer-gBGbkw bmCmlg"
  >
    This is a layer
  </div>
</div>
`;

exports[`Layer aligns right 2`] = `
"

.bGwGvr {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  position: relative;
  z-index: 10;
  height: 100vh;
  overflow: auto;
  background-color: rgba(0,0,0,0.5);
}

@media only screen and (min-width:700px) {
  .bGwGvr {
    position: fixed;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
  }
}

@media only screen and (max-width:699px) {
  .bClIQd {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .bClIQd {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0px;
    bottom: 0px;
    left: 0px;
    -webkit-animation: hlTcuJ 0.2s ease-in-out forwards;
    animation: hlTcuJ 0.2s ease-in-out forwards;
  }
}

@media only screen and (max-width:699px) {
  .bmCmlg {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .bmCmlg {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0px;
    bottom: 0px;
    right: 0px;
    -webkit-animation: vdrVB 0.2s ease-in-out forwards;
    animation: vdrVB 0.2s ease-in-out forwards;
  }
}"
`;

exports[`Layer aligns top 1`] = `
<div
  class="StyledLayer-ceZzeh bGwGvr"
  id="top-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledContainer-gBGbkw iQfNKu"
  >
    This is a layer
  </div>
</div>
`;

exports[`Layer aligns top 2`] = `
"

.bGwGvr {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  position: relative;
  z-index: 10;
  height: 100vh;
  overflow: auto;
  background-color: rgba(0,0,0,0.5);
}

@media only screen and (min-width:700px) {
  .bGwGvr {
    position: fixed;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
  }
}

@media only screen and (max-width:699px) {
  .bClIQd {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .bClIQd {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0px;
    bottom: 0px;
    left: 0px;
    -webkit-animation: hlTcuJ 0.2s ease-in-out forwards;
    animation: hlTcuJ 0.2s ease-in-out forwards;
  }
}

@media only screen and (max-width:699px) {
  .bmCmlg {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .bmCmlg {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0px;
    bottom: 0px;
    right: 0px;
    -webkit-animation: vdrVB 0.2s ease-in-out forwards;
    animation: vdrVB 0.2s ease-in-out forwards;
  }
}

@media only screen and (max-width:699px) {
  .iQfNKu {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .iQfNKu {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    left: 50%;
    -webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
    -webkit-animation: fVNlMJ 0.2s ease-in-out forwards;
    animation: fVNlMJ 0.2s ease-in-out forwards;
  }
}"
`;

exports[`Layer full margin renders 1`] = `
<div
  class="StyledLayer-ceZzeh bGwGvr"
  id="full-margin-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledContainer-gBGbkw ejvNhS"
  >
    This is a full layer with margin
  </div>
</div>
`;

exports[`Layer full margin renders 2`] = `
"

.bGwGvr {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  position: relative;
  z-index: 10;
  height: 100vh;
  overflow: auto;
  background-color: rgba(0,0,0,0.5);
}

@media only screen and (min-width:700px) {
  .bGwGvr {
    position: fixed;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
  }
}

@media only screen and (min-width:700px) {
  .jNReQX {
    position: fixed;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
  }
}

@media only screen and (max-width:699px) {
  .bClIQd {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .bClIQd {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0px;
    bottom: 0px;
    left: 0px;
    -webkit-animation: hlTcuJ 0.2s ease-in-out forwards;
    animation: hlTcuJ 0.2s ease-in-out forwards;
  }
}

@media only screen and (max-width:699px) {
  .bmCmlg {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .bmCmlg {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0px;
    bottom: 0px;
    right: 0px;
    -webkit-animation: vdrVB 0.2s ease-in-out forwards;
    animation: vdrVB 0.2s ease-in-out forwards;
  }
}

@media only screen and (max-width:699px) {
  .iQfNKu {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .iQfNKu {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    left: 50%;
    -webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
    -webkit-animation: fVNlMJ 0.2s ease-in-out forwards;
    animation: fVNlMJ 0.2s ease-in-out forwards;
  }
}

@media only screen and (max-width:699px) {
  .kqwWDX {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .kqwWDX {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    bottom: 0px;
    right: 50%;
    -webkit-transform: translateX(50%);
    -ms-transform: translateX(50%);
    transform: translateX(50%);
    -webkit-animation: ifqUGO 0.2s ease-in-out forwards;
    animation: ifqUGO 0.2s ease-in-out forwards;
  }
}

@media only screen and (max-width:699px) {
  .jgPQjz {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .jgPQjz {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
  }
}

@media only screen and (max-width:699px) {
  .lavLMH {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .lavLMH {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: none;
    bottom: 50%;
    right: 50%;
    -webkit-animation: ghNyyk 0.1s forwards;
    animation: ghNyyk 0.1s forwards;
  }
}

@media only screen and (max-width:699px) {
  .ejvNhS {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .ejvNhS {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
  }
}"
`;

exports[`Layer hides 1`] = `
<div
  class="StyledLayer-ceZzeh gVCohQ"
  id="hidden-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledContainer-gBGbkw jgPQjz"
  >
    This is a layer
  </div>
</div>
`;

exports[`Layer hides 2`] = `
"

@media only screen and (min-width:700px) {
  .bGwGvr {
    position: fixed;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
  }
}

.gVCohQ {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  position: relative;
  z-index: 10;
  height: 100vh;
  overflow: auto;
  background-color: rgba(0,0,0,0.5);
  left: -100%;
  right: 100%;
  z-index: -1;
  position: fixed;
}

@media only screen and (max-width:699px) {
  .bClIQd {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .bClIQd {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0px;
    bottom: 0px;
    left: 0px;
    -webkit-animation: hlTcuJ 0.2s ease-in-out forwards;
    animation: hlTcuJ 0.2s ease-in-out forwards;
  }
}

@media only screen and (max-width:699px) {
  .bmCmlg {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .bmCmlg {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0px;
    bottom: 0px;
    right: 0px;
    -webkit-animation: vdrVB 0.2s ease-in-out forwards;
    animation: vdrVB 0.2s ease-in-out forwards;
  }
}

@media only screen and (max-width:699px) {
  .iQfNKu {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .iQfNKu {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    left: 50%;
    -webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
    -webkit-animation: fVNlMJ 0.2s ease-in-out forwards;
    animation: fVNlMJ 0.2s ease-in-out forwards;
  }
}

@media only screen and (max-width:699px) {
  .kqwWDX {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .kqwWDX {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    bottom: 0px;
    right: 50%;
    -webkit-transform: translateX(50%);
    -ms-transform: translateX(50%);
    transform: translateX(50%);
    -webkit-animation: ifqUGO 0.2s ease-in-out forwards;
    animation: ifqUGO 0.2s ease-in-out forwards;
  }
}

@media only screen and (max-width:699px) {
  .jgPQjz {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .jgPQjz {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
  }
}"
`;

exports[`Layer hides 3`] = `
<div
  class="StyledLayer-ceZzeh gVCohQ"
  id="hidden-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledContainer-gBGbkw jgPQjz"
  >
    This is a layer
  </div>
</div>
`;

exports[`Layer hides 4`] = `
"

@media only screen and (min-width:700px) {
  .bGwGvr {
    position: fixed;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
  }
}

.gVCohQ {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  position: relative;
  z-index: 10;
  height: 100vh;
  overflow: auto;
  background-color: rgba(0,0,0,0.5);
  left: -100%;
  right: 100%;
  z-index: -1;
  position: fixed;
}

@media only screen and (max-width:699px) {
  .bClIQd {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .bClIQd {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0px;
    bottom: 0px;
    left: 0px;
    -webkit-animation: hlTcuJ 0.2s ease-in-out forwards;
    animation: hlTcuJ 0.2s ease-in-out forwards;
  }
}

@media only screen and (max-width:699px) {
  .bmCmlg {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .bmCmlg {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0px;
    bottom: 0px;
    right: 0px;
    -webkit-animation: vdrVB 0.2s ease-in-out forwards;
    animation: vdrVB 0.2s ease-in-out forwards;
  }
}

@media only screen and (max-width:699px) {
  .iQfNKu {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .iQfNKu {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    left: 50%;
    -webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
    -webkit-animation: fVNlMJ 0.2s ease-in-out forwards;
    animation: fVNlMJ 0.2s ease-in-out forwards;
  }
}

@media only screen and (max-width:699px) {
  .kqwWDX {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .kqwWDX {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    bottom: 0px;
    right: 50%;
    -webkit-transform: translateX(50%);
    -ms-transform: translateX(50%);
    transform: translateX(50%);
    -webkit-animation: ifqUGO 0.2s ease-in-out forwards;
    animation: ifqUGO 0.2s ease-in-out forwards;
  }
}

@media only screen and (max-width:699px) {
  .jgPQjz {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .jgPQjz {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
  }
}"
`;

exports[`Layer is accessible 1`] = `
<div
  id="body-node"
>
  <input
    tabindex="-1"
  />
  <input
    tabindex="-1"
    data-g-tabindex="10"
  />
</div>
`;

exports[`Layer is accessible 2`] = `
<div
  id="layer-node"
>
  This is a layer
  <input />
</div>
`;

exports[`Layer is accessible 3`] = `
<div
  id="body-node"
>
  <input />
  <input
    tabindex="10"
  />
</div>
`;

exports[`Layer plain renders 1`] = `
<div
  class="StyledLayer-ceZzeh jNReQX"
  id="plain-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledContainer-gBGbkw lavLMH"
  >
    This is a plain layer
  </div>
</div>
`;

exports[`Layer plain renders 2`] = `
"

@media only screen and (min-width:700px) {
  .bGwGvr {
    position: fixed;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
  }
}

.jNReQX {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  position: relative;
  z-index: 10;
  height: 100vh;
  overflow: auto;
  background-color: transparent;
}

@media only screen and (min-width:700px) {
  .jNReQX {
    position: fixed;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
  }
}

@media only screen and (max-width:699px) {
  .bClIQd {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .bClIQd {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0px;
    bottom: 0px;
    left: 0px;
    -webkit-animation: hlTcuJ 0.2s ease-in-out forwards;
    animation: hlTcuJ 0.2s ease-in-out forwards;
  }
}

@media only screen and (max-width:699px) {
  .bmCmlg {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .bmCmlg {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    top: 0px;
    bottom: 0px;
    right: 0px;
    -webkit-animation: vdrVB 0.2s ease-in-out forwards;
    animation: vdrVB 0.2s ease-in-out forwards;
  }
}

@media only screen and (max-width:699px) {
  .iQfNKu {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .iQfNKu {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    left: 50%;
    -webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
    -webkit-animation: fVNlMJ 0.2s ease-in-out forwards;
    animation: fVNlMJ 0.2s ease-in-out forwards;
  }
}

@media only screen and (max-width:699px) {
  .kqwWDX {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .kqwWDX {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
    bottom: 0px;
    right: 50%;
    -webkit-transform: translateX(50%);
    -ms-transform: translateX(50%);
    transform: translateX(50%);
    -webkit-animation: ifqUGO 0.2s ease-in-out forwards;
    animation: ifqUGO 0.2s ease-in-out forwards;
  }
}

@media only screen and (max-width:699px) {
  .jgPQjz {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .jgPQjz {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
  }
}

@media only screen and (max-width:699px) {
  .lavLMH {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:700px) {
  .lavLMH {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: none;
    bottom: 50%;
    right: 50%;
    -webkit-animation: ghNyyk 0.1s forwards;
    animation: ghNyyk 0.1s forwards;
  }
}"
`;
